--- a/data/kubernetes/dashboard/admin-user.yaml
+++ b/data/kubernetes/dashboard/admin-user.yaml
@@ -16,12 +16,12 @@ subjects:
 - kind: ServiceAccount
   name: admin-user
   namespace: kube-system
-#---
-#apiVersion: v1
-#kind: Secret
-#metadata:
-#  name: oke-admin-user-token
-#  namespace: kube-system
-#  annotations:
-#    kubernetes.io/service-account.name: admin-user
-#type: kubernetes.io/service-account-token
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: oke-admin-user-token
+  namespace: kube-system
+  annotations:
+    kubernetes.io/service-account.name: admin-user
+type: kubernetes.io/service-account-token
