--- a/data/kubernetes/dashboard/dashboard-service.yaml
+++ b/data/kubernetes/dashboard/dashboard-service.yaml
@@ -12,3 +12,17 @@ spec:
     - port: 443
       targetPort: 8443 
       nodePort: 30002
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kubernetes-dashboard
+  namespace: kubernetes-dashboard
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+  - kind: ServiceAccount
+    name: kubernetes-dashboard
+    namespace: kubernetes-dashboard
