--- a/kubernetes/Vagrantfile
+++ b/kubernetes/Vagrantfile
@@ -2,8 +2,6 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
 
   config.vm.define "kub" do |kub|
@@ -22,8 +20,7 @@ Vagrant.configure("2") do |config|
       vb_kub.customize ["modifyvm", :id, "--vram", "32"]
     end
 
-    # Every Vagrant development environment requires a box. You can search for
-    # boxes at https://vagrantcloud.com/search.
+    # search boxes at https://vagrantcloud.com/search.
     kub.vm.box = "rockylinux/9"
     kub.vm.hostname = "kubernetes-vm"
     kub.vm.network "private_network", ip: "192.168.91.200"
@@ -122,10 +119,10 @@ Vagrant.configure("2") do |config|
       echo "Creating admin user"
       # https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengaddingserviceaccttoken.htm
       /usr/local/bin/kubectl apply -f /vagrant_data/kubernetes/dashboard/admin-user.yaml
-      /usr/local/bin/kubectl -n kube-system describe secret $(kubectl -n kube-system get secret | grep admin-user | awk '{print $1}')
+      /usr/local/bin/kubectl -n kube-system describe secret $(/usr/local/bin/kubectl -n kube-system get secret | grep admin-user | awk '{print $1}')
 
-      : <<'ENDCOMMENT'      
-      echo "Installing Prometheus"
+      
+	  echo "Installing Prometheus"
       /usr/local/bin/kubectl create namespace monitoring
       /usr/local/bin/kubectl create -f /vagrant_data/kubernetes/prometheus/clusterRole.yaml
       /usr/local/bin/kubectl create -f /vagrant_data/kubernetes/prometheus/config-map.yaml
@@ -145,14 +142,16 @@ Vagrant.configure("2") do |config|
       /usr/local/bin/kubectl apply -f https://k8s.io/examples/controllers/nginx-deployment.yaml
       /usr/local/bin/kubectl wait deployment nginx-deployment --for condition=Available=True --timeout=120s
       /usr/local/bin/kubectl apply -f /vagrant_data/kubernetes/nginx-sample/nginx-service.yaml
-      ENDCOMMENT
 
       # https://devopscube.com/setup-grafana-kubernetes/
       /usr/local/bin/kubectl create -f /vagrant_data/kubernetes/grafana/grafana-datasource-config.yaml
       /usr/local/bin/kubectl create -f /vagrant_data/kubernetes/grafana/deployment.yaml
       /usr/local/bin/kubectl create -f /vagrant_data/kubernetes/grafana/service.yaml
       # retrieve podname in shell
-      # read podname ready status < <(kubectl get pods -o wide -n monitoring | grep grafana)
+      # read podname ready status < <(/usr/local/bin/kubectl get pods -o wide -n monitoring | grep grafana)
+	  
+	  : <<'ENDCOMMENT'
+      ENDCOMMENT
     SHELL
   end
   
@@ -234,6 +233,24 @@ EOT
       sudo systemctl daemon-reload
       sudo systemctl enable kibana.service
       sudo systemctl start kibana.service
+    SHELL
+  end
+  
+  config.vm.define "activemq" do |activemq|
+    activemq.vm.provider "vmware_desktop" do |vm_kib|
+      vm_kib.gui = false
+      vm_kib.vmx['numvcpus'] = '2' 
+      vm_kib.vmx['memsize'] = '3072'
+      vm_kib.ssh_info_public = true
+    end
+
+    activemq.vm.box = "rockylinux/9"
+    activemq.vm.hostname = "activemq-vm"
+    activemq.vm.synced_folder "../data", "/vagrant_data"
+
+    activemq.vm.provision "shell", inline: <<-SHELL
+      dnf install wget mc vim net-tools -y -q
+      dnf update -y
     SHELL
   end
 end
