--- a/data/kubernetes/grafana/grafana-datasource-config.yaml
+++ b/data/kubernetes/grafana/grafana-datasource-config.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasources
