--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -46,6 +46,9 @@ Vagrant.configure("2") do |config|
     kub.vm.provision "shell", inline: <<-SHELL
 		export DEBIAN_FRONTEND=noninteractive
 
+		sudo sed -ri '/\sswap\s/s/^#?/#/' /etc/fstab
+		sudo swapoff -a
+
     curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.31/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
     sudo chmod 644 /etc/apt/keyrings/kubernetes-apt-keyring.gpg # allow unprivileged APT programs to read this keyring
     echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
@@ -111,10 +114,6 @@ EOF
 
 
 		# sudo apt-get upgrade -y
-		
-		sudo sed -ri '/\sswap\s/s/^#?/#/' /etc/fstab
-		sudo swapoff -a
-		
 		sudo systemctl enable kubelet
 		sudo kubeadm config images pull
 		sudo kubeadm init --pod-network-cidr=10.244.0.0/16
@@ -125,7 +124,21 @@ EOF
 		sudo cp -i /etc/kubernetes/admin.conf "$HOME"/.kube/config
 		sudo chown "$(id -u)":"$(id -g)" "$HOME"/.kube/config
 
-		# configure for vagrant user also.		
+		# allow to run pod on the control plane because we are in a testing environmnet.
+		sudo kubectl taint nodes k8s-masternode node-role.kubernetes.io/master-
+		sudo kubectl taint nodes k8s-masternode node-role.kubernetes.io/control-plane-
+		sudo kubectl taint nodes k8s-masternode dedicated=special-user:NoSchedule-
+
+    kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/tigera-operator.yaml
+    curl https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml -O
+    kubectl create -f custom-resources.yaml
+    #watch kubectl get pods -n calico-system
+    kubectl get pods -n calico-system
+	
+    systemctl restart containerd
+		systemctl restart kubelet
+
+    # configure for vagrant user also.		
 		sudo -i -u vagrant bash << EOF
 			whoami
 			pwd
@@ -133,12 +146,7 @@ EOF
 			sudo cp /etc/kubernetes/admin.conf /home/vagrant/.kube/config
 			sudo chown 1000:1000 /home/vagrant/.kube/config
 EOF
-		
-		# allow to run pod on the control plane because we are in a testing environmnet.
-		sudo kubectl taint nodes k8s-masternode node-role.kubernetes.io/master-
-		sudo kubectl taint nodes k8s-masternode node-role.kubernetes.io/control-plane-
-		sudo kubectl taint nodes k8s-masternode dedicated=special-user:NoSchedule-
-		
+
 		#sudo kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 		
 		# https://stackoverflow.com/questions/72844687/invalid-capacity-0-on-image-filesystem-lens-id-kubernetes
