--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -129,14 +129,18 @@ EOF
 		sudo kubectl taint nodes k8s-masternode node-role.kubernetes.io/control-plane-
 		sudo kubectl taint nodes k8s-masternode dedicated=special-user:NoSchedule-
 
-    kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/tigera-operator.yaml
-    curl https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml -O
-    kubectl create -f custom-resources.yaml
-    #watch kubectl get pods -n calico-system
-    kubectl get pods -n calico-system
-	
     systemctl restart containerd
 		systemctl restart kubelet
+
+    kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/tigera-operator.yaml
+    curl https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml -O
+    sed -i 's/192.168.0.0\/16/10.244.0.0\/16/g' custom-resources.yaml
+    kubectl create -f custom-resources.yaml
+    # kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml
+    #watch kubectl get pods -n calico-system
+    kubectl get pods -n calico-system
+    kubectl get tigerastatus
+    kubectl get tigerastatus -o yaml
 
     # configure for vagrant user also.		
 		sudo -i -u vagrant bash << EOF
