--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -134,11 +134,11 @@ EOF
 
     kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/tigera-operator.yaml
     curl https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml -O
-    sed -i 's/192.168.0.0\/16/10.244.0.0\/16/g' custom-resources.yaml
+    sed -i 's/192.168.0.0\\/16/10.244.0.0\\/16/g' custom-resources.yaml
     kubectl create -f custom-resources.yaml
     # kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.2/manifests/custom-resources.yaml
-    #watch kubectl get pods -n calico-system
-    kubectl get pods -n calico-system
+    watch kubectl get pods -n calico-system
+    # kubectl get pods -n calico-system
     kubectl get tigerastatus
     kubectl get tigerastatus -o yaml
 
