--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -18,6 +18,7 @@ Vagrant.configure("2") do |config|
 
     kub.vm.provision "shell", path: "setup.sh"
     kub.vm.provision "shell", path: "kubernetes - setup.sh"
+    kub.vm.provision "shell", path: "prometheus.sh"
     kub.vm.provision "shell", path: "dashboard.sh"
     kub.vm.provision "shell", path: "otel.sh"
 
