--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -18,9 +18,13 @@ Vagrant.configure("2") do |config|
 
     kub.vm.provision "shell", path: "setup.sh"
     kub.vm.provision "shell", path: "kubernetes - setup.sh"
+    kub.vm.provision "shell", path: "kong.sh"
+    kub.vm.provision "shell", path: "harbor.sh"
     kub.vm.provision "shell", path: "prometheus.sh"
     kub.vm.provision "shell", path: "dashboard.sh"
+=begin
     kub.vm.provision "shell", path: "otel.sh"
+=end
 
     kub.vm.provision "shell", inline: <<-SHELL
 		export DEBIAN_FRONTEND=noninteractive
