--- a/2024024 - k8s - calico/Vagrantfile
+++ b/2024024 - k8s - calico/Vagrantfile
@@ -22,6 +22,7 @@ Vagrant.configure("2") do |config|
     kub.vm.provision "shell", path: "harbor.sh"
     kub.vm.provision "shell", path: "prometheus.sh"
     kub.vm.provision "shell", path: "dashboard.sh"
+    kub.vm.provision "shell", path: "keycloak.sh"
 =begin
     kub.vm.provision "shell", path: "otel.sh"
 =end
